--- a/fevents.html
+++ b/fevents.html
@@ -90,11 +90,15 @@
 					<div class="col-xs-3"><a href="#kabaddi"><div class="cont">
 						<img src="img/kabaddi.svg" width="100" height="100"></div></a>
 					</div>
-				</div>				
+				</div>
+				<div id="eve-name">
+					<p>&nbsp;</p>
+				</div>			
 			</div>
 		</div>
 		<div class="section" id="section2">
 			<div class="container-fluid">
+				<h3 class="eve-header">Football</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
@@ -166,6 +170,7 @@
 		</div>
 		<div class="section" id="section3">
 			<div class="container-fluid">
+				<h3 class="eve-header">Cricket</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
@@ -224,6 +229,7 @@
 		</div>
 		<div class="section" id="section4">
 			<div class="container-fluid">
+				<h3 class="eve-header">Basketball</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
@@ -274,6 +280,7 @@
 		</div>
 		<div class="section" id="section5">
 			<div class="container-fluid">
+				<h3 class="eve-header">Volleyball</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
@@ -321,6 +328,7 @@
 		</div>
 		<div class="section" id="section6">
 			<div class="container-fluid">
+				<h3 class="eve-header">Badminton</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
@@ -380,6 +388,7 @@
 		</div>
 		<div class="section" id="section7">
 			<div class="container-fluid">
+				<h3 class="eve-header">Tennis</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
@@ -431,6 +440,7 @@
 		</div>
 		<div class="section" id="section8">
 			<div class="container-fluid">
+				<h3 class="eve-header">Table-Tennis</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
@@ -561,6 +571,7 @@
 		</div>
 		<div class="section" id="section9">
 			<div class="container-fluid">
+				<h3 class="eve-header">Squash</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
@@ -611,6 +622,7 @@
 		</div>
 		<div class="section" id="section10">
 			<div class="container-fluid">
+				<h3 class="eve-header">Carrom</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
@@ -669,6 +681,7 @@
 		</div>
 		<div class="section" id="section11">
 			<div class="container-fluid">
+				<h3 class="eve-header">Chess</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
@@ -721,6 +734,7 @@
 		</div>
 		<div class="section" id="section12">
 			<div class="container-fluid">
+				<h3 class="eve-header">Powerlifting</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
@@ -779,6 +793,7 @@
 		</div>
 		<div class="section" id="section13">
 			<div class="container-fluid">
+				<h3 class="eve-header">Kabaddi</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
 					<a href="#" class="btn btn-primary highl">Highlights</a>
 					<a href="#" class="btn btn-primary rulel">Rules</a>
