--- a/about.html
+++ b/about.html
@@ -198,39 +198,38 @@
 						<h3>Our Amazing Team</h3>
 						<p>The people who make it happen.</p>
 						<div class="row">
-							<div class="col-sm-4 col-xs-4">
+							<div class="col-sm-4 col-xs-6">
 								<div class="thumb">
 									<img src="img/team.jpg" width="100%" height="auto">
 									<div class="text">Lorem Ipsum</div>							
 								</div>
 							</div>
-							<div class="col-sm-4 col-xs-4">
+							<div class="col-sm-4 col-xs-6">
 								<div class="thumb">
 									<img src="img/team.jpg" width="100%" height="auto">
 									<div class="text">Lorem Ipsum</div>							
 								</div>
 							</div>
-							<div class="col-sm-4 col-xs-4">
+							<div class="col-sm-4 col-xs-6">
 								<div class="thumb">
 									<img src="img/team.jpg" width="100%" height="auto">
 									<div class="text">Lorem Ipsum</div>							
 								</div>
 							</div>
-						</div>
-						<div class="row">
-							<div class="col-sm-4 col-xs-4">
+						
+							<div class="col-sm-4 col-xs-6">
 								<div class="thumb">
 									<img src="img/team.jpg" width="100%" height="auto">
 									<div class="text">Lorem Ipsum</div>							
 								</div>
 							</div>
-							<div class="col-sm-4 col-xs-4">
+							<div class="col-sm-4 col-xs-6">
 								<div class="thumb">
 									<img src="img/team.jpg" width="100%" height="auto">
 									<div class="text">Lorem Ipsum</div>							
 								</div>
 							</div>
-							<div class="col-sm-4 col-xs-4">
+							<div class="col-sm-4 col-xs-6">
 								<div class="thumb">
 									<img src="img/team.jpg" width="100%" height="auto">
 									<div class="text">Lorem Ipsum</div>							
@@ -284,13 +283,13 @@
 						<i class="fa fa-map-signs fa-2x" aria-hidden="true"></i>
 					</div>
 					<div class="row" id="contactm">
-						<div class="col-xs-6">
+						<div class="col-xs-12 col-sm-6">
 							<p><i class="fa fa-plane fa-2x" aria-hidden="true"></i></p>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m24!1m8!1m3!1d30774.004365080695!2d73.83258907922375!3d15.389990443382409!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x3bbfc7fa8c0cf84d%3A0xb7d429222d347557!2sGoa+International+Airport%2C+Airport+Rd%2C+Dabolim%2C+Goa+403801%2C+India!3m2!1d15.380348499999998!2d73.8349952!4m5!1s0x3bbfb8375851666d%3A0x4ad5683010110240!2sBITS+Pilani+K+K+Birla+Goa+Campus%2C+NH+17B%2C+Bypass+Road%2C+Zuarinagar%2C+Sancoale%2C+Goa+403726%2C+India!3m2!1d15.391123499999999!2d73.87816169999999!5e0!3m2!1sen!2sin!4v1503444496236" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m24!1m8!1m3!1d30774.004365080695!2d73.83258907922375!3d15.389990443382409!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x3bbfc7fa8c0cf84d%3A0xb7d429222d347557!2sGoa+International+Airport%2C+Airport+Rd%2C+Dabolim%2C+Goa+403801%2C+India!3m2!1d15.380348499999998!2d73.8349952!4m5!1s0x3bbfb8375851666d%3A0x4ad5683010110240!2sBITS+Pilani+K+K+Birla+Goa+Campus%2C+NH+17B%2C+Bypass+Road%2C+Zuarinagar%2C+Sancoale%2C+Goa+403726%2C+India!3m2!1d15.391123499999999!2d73.87816169999999!5e0!3m2!1sen!2sin!4v1503444496236" class="map" width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</div>
-						<div class="col-xs-6">
+						<div class="col-xs-12 col-sm-6">
 							<p><i class="fa fa-subway fa-2x" aria-hidden="true"></i></p>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m24!1m8!1m3!1d85821.02373199929!2d73.83574675434964!3d15.324594780772003!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x3bbfb3c7df37152f%3A0xa250076c196fb63!2sMadgaon%2C+Konkan+Rail+Academy%2C%2C+Margao%2C+Goa+403601%2C+India!3m2!1d15.2676278!2d73.9710326!4m5!1s0x3bbfb8375851666d%3A0x4ad5683010110240!2sBITS+Pilani+K+K+Birla+Goa+Campus%2C+NH+17B%2C+Bypass+Road%2C+Zuarinagar%2C+Sancoale%2C+Goa+403726%2C+India!3m2!1d15.391123499999999!2d73.87816169999999!5e0!3m2!1sen!2sin!4v1503444822425" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m24!1m8!1m3!1d85821.02373199929!2d73.83574675434964!3d15.324594780772003!3m2!1i1024!2i768!4f13.1!4m13!3e0!4m5!1s0x3bbfb3c7df37152f%3A0xa250076c196fb63!2sMadgaon%2C+Konkan+Rail+Academy%2C%2C+Margao%2C+Goa+403601%2C+India!3m2!1d15.2676278!2d73.9710326!4m5!1s0x3bbfb8375851666d%3A0x4ad5683010110240!2sBITS+Pilani+K+K+Birla+Goa+Campus%2C+NH+17B%2C+Bypass+Road%2C+Zuarinagar%2C+Sancoale%2C+Goa+403726%2C+India!3m2!1d15.391123499999999!2d73.87816169999999!5e0!3m2!1sen!2sin!4v1503444822425" class="map" width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
