--- a/fevents.html
+++ b/fevents.html
@@ -22,9 +22,14 @@
 	<div id="loader"><img src="img/loader.svg" width="80%" height="auto"></div>
 </div>
 
-<div class="back-button"><a href="index.html"><p>
+<div class="back-button"><a href="/"><p>
 	&nbsp;&nbsp;<i class="fa fa-backward" aria-hidden="true"></i>
 	<br>Back</p></a>
+</div>
+
+<div class="sidebar-toggle"><a href="#">
+	<i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+	</a>
 </div>
 
 <div class="main">
