--- a/fevents.html
+++ b/fevents.html
@@ -101,7 +101,7 @@
 				</div>			
 			</div>
 		</div>
-		<div class="section pp-scrollable" id="section2">
+		<div class="section" id="section2">
 			<div class="container-fluid">
 				<h3 class="eve-header">Football</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
@@ -171,7 +171,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="section pp-scrollable" id="section3">
+		<div class="section" id="section3">
 			<div class="container-fluid">
 				<h3 class="eve-header">Cricket</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
@@ -431,7 +431,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="section pp-scrollable" id="section8">
+		<div class="section" id="section8">
 			<div class="container-fluid">
 				<h3 class="eve-header">Table-Tennis</h3>
 				<div class="btn-group btn-group-justified btn-group-raised">
