synchronized this repo with the main repo

--- a/ievents.html
+++ b/ievents.html
@@ -4,18 +4,17 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Spree BITS GOA 2018">
-	<meta name="author" content="Spree BITS GOA 2018">
-	<meta name="keywords" content="spree, bits-spree, bits, bitsspree, spree 18">
+	<meta name="description" content="SPREE is the biggest Inter-Collegiate Sports and Entertainment festival of India">
+	<meta name="keywords" content="Spree, Spree 2018, Bits Spree, BITS, bitsspree, Spree 18, BITS Goa Sports Fest, Sports Fest, BITS Goa Fest, Spree website, BITS Goa">
 	<link rel="shortcut icon" href="favicon.ico"/>
-	<title>Informal Events</title>
+	<title>Informal Events | Spree</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Mada|Cinzel" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-material.css">
 	<link rel="stylesheet" type="text/css" href="css/plugins.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/ievents.css">
-</head>
+</head> 
 <body>
 
 	<div id="loader-wrapper">
@@ -23,13 +22,44 @@
 	</div>
 
 	<div class="back-button"><a href="index.html"><p>
-		&nbsp;&nbsp;<i class="fa fa-backward" aria-hidden="true"></i>
-		<br>Back</p></a>
+		&nbsp;&nbsp;&nbsp;<i class="fa fa-backward" aria-hidden="true"></i>
+		<br>Home</p></a>
 	</div>
 
-	<div class="container">
-		<h2>Coming Soon!!</h2>
-	</div>
+		<div id="backv"></div>
+		<div class="container">
+			<h1>Formal Events</h1>
+
+			<div class="row">
+				<h3>Day 1</h3>
+				<div class="col-md-12">
+					<img src="img/day1.jpg">
+				</div>
+			</div>
+
+			<div class="row">
+				<h3>Day 2</h3>
+				<div class="col-md-12 animated" id="animate1" data-animation="bounceInLeft">
+					<img src="img/day2.jpg">
+				</div>
+			</div>
+
+			<div class="row">
+				<h3>Day 3</h3>
+				<div class="col-md-12 animated" id="animate2" data-animation="bounceInRight">
+					<img src="img/day3.jpg">
+				</div>
+			</div>
+
+			<div class="row">
+				<h3 id="credits">Cricket Scores Live <span>provided by CricHQ</span></h3>
+				<p><span class="login">Email:</span> livefeeds@crichq.com</p>
+				<p><span class="login">password:</span> live123</p>
+				<iframe width="600" scrolling="no" height="600" src="https://www.crichq.com/plugins/base?width=598&height=600&border=1#organisations/983"></iframe>
+			</div>
+		</div>
+
+	
 
 
 	<script src="js/main.js"></script>
