--- a/udaan.html
+++ b/udaan.html
@@ -21,7 +21,7 @@
 		<div id="loader"><img src="img/loader.svg" width="80%" height="auto"></div>
 	</div>
 
-	<div class="back-button"><a href="/"><p>
+	<div class="back-button"><a href="index.html"><p>
 		&nbsp;&nbsp;&nbsp;<i class="fa fa-backward" aria-hidden="true"></i>
 		<br>Home</p></a>
     </div>
